# mcp-client-console

./: README.md  README_2.md  pyproject.toml
src/mcp_client_console/: __init__.py  cli.py  client.py  config_default.toml  config_loader.py  default_config.toml  terminal.py
src/mcp_client_console/_vendor/llm_shepherd/: README.md  __init__.py  demo.py  detectors.py  envelope.py  interventions.py  ledger.py  policy.py  salvage.py  selftest.py  shepherd.py
src/mcp_client_console/llm/: __init__.py  orchestrator.py  provider_base.py  provider_local.py
