# PyPi.org package stuff
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_client_console"]



# Config project stuff
[project]
name = "mcp-client-console"
version = "0.2.2"
description = "MCP client that connects to a remote MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.25,<2",
    "platformdirs>4.0",
    "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/geomux/mcp-client-console"

[project.scripts]
mcp-client-console = "mcp_client_console.cli:main"





